# OrpheusDL

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py
legacy/: README.md  orpheus.py
orpheus/: __init__.py  cli.py
orpheus/utils/: models.py
orpheusdl/: cli.py  core.py  music_downloader.py  tagging.py
